<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_shopping_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.colinbradley.fwc.ShoppingCartActivity"
    tools:showIn="@layout/activity_shopping_cart">

    <android.support.v7.widget.RecyclerView
        android:background="@color/colorPrimaryDark"
        android:id="@+id/shopping_cart_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45sp">
    </android.support.v7.widget.RecyclerView>




</RelativeLayout>
