<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.colinbradley.fwc.ShoppingCartActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_shopping_cart" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/checkout" />

    <TextView
        android:id="@+id/total_price"
        android:layout_gravity="bottom|start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:text="TOTAL"/>

    <ImageView
        android:id="@+id/marks_in_cart"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:background="@drawable/markicon"
        android:layout_gravity="bottom|start"
        android:layout_toRightOf="@id/total_price"
        android:layout_marginLeft="50sp"
        android:layout_marginBottom="8dp"
        />

    <Button
        android:id="@+id/update_price_button"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_gravity="bottom|start"
        android:layout_toRightOf="@id/marks_in_cart"
        android:layout_marginLeft="90sp"
        android:layout_marginBottom="8sp"
        android:text="Update Cart"
        />


</android.support.design.widget.CoordinatorLayout>
