...
            android:textSize="15sp"
            android:text="GEAR TYPE"
            android:layout_toRightOf="@id/gear_photo_cart"
            android:layout_below="@+id/gear_name_cart"/>

        <Button
            android:id="@+id/add1button"
            android:layout_width="60sp"
            android:layout_height="35sp"
            android:text="+"
            android:layout_toRightOf="@id/gear_photo_cart"
            android:layout_below="@id/gear_type_cart"/>

        <Button
            android:id="@+id/remove1button"
            android:layout_width="60sp"
            android:layout_height="35sp"
            android:text="-"
            android:layout_toRightOf="@id/add1button"
            android:layout_below="@id/gear_type_cart"/>

...
